--- a/registers.html
+++ b/registers.html
@@ -248,7 +248,7 @@ Rather Not Say:
 </label><br><br>
 <input class="re" type="submit" name="register" value="submit" ><br><br>
 &#60;&#60;&#60;
-<a class="log" style="color:rgb(41, 118, 211);font-style: normal" href="C:\Users\LINDOKUHLE\Documents\for the baby\for spiwe\reg.html">&#60;Login</a>
+<a class="log" style="color:rgb(41, 118, 211);font-style: normal" href="C:\Users\LINDOKUHLE\Documents\for the baby\for spiwe\index.html">&#60;Login</a>
 
 
 
